KMessageDialog: disconnect default buttonbox signals as we emit done() manually

QDialogButtonBox internally creates some default connections, e.g. connects
OK clicked() to accepted(); then we emit done(buttoncode), the resultant is
that one button press causes two clicked signals to get emitted; which leads
some interesting behavoiur, e.g. undo'ing a file copy in dolphin, invokes
the askuserdelete dialog, you click deleted and get a crash in KIO, since
the code tries to undo the copy twice...

BUG: 442332
FIXED-IN: 5.87